= New Features =

== 1.14 release (in progress) == #release-1.14

=== Library ===

==== Major changes ====
 * Add dlib solvers

==== New classes ====
 * Dlib
 * SquaredNormal
 * NullHessian

==== API changes ====
 * Removed deprecated specific RandomVector constructors
 * Removed deprecated HypothesisTest::Smirnov
 * Removed deprecated FittingTest::TwoSamplesKolmogorov
 * Removed deprecated LinearModel, LinearModelFactory
 * Removed deprecated HypothesisTest::(Partial|Full)Regression
 * Removed deprecated OptimizationProblem(levelFunction, levelValue) ctor
 * Removed deprecated (Linear|Quadratic)(LeastSquares|Taylor)::getResponseSurface
 * Removed deprecated VisualTest::DrawEmpiricalCDF,DrawHistogram,DrawClouds

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===
 * https://github.com/openturns/openturns/milestone/4?closed=1
 * #1006 (Text drawable does not handle size)


== 1.13 release (2019-06-06) == #release-1.13

=== Library ===

==== Major changes ====
 * Added OPT++ solvers
 * Improved a lot the performace of all the Rosenblatt related computations
 * Added elementary calibration capabilities
 * Added CMinpack, Ceres Solver least-squares solvers
 * Add dlib solvers

==== New classes ====
 * ParametricPointToFieldFunction
 * LinearModelResult, LinearModelAlgorithm, LinearModelAnalysis
 * OPTpp
 * NearestPointProblem, LeastSquaresProblem
 * CMinpack
 * Ceres
 * DiscreteMarkovChain
 * CalibrationAlgorithm, CalibrationResult, GaussianLinearCalibration, LinearLeastSquaresCalibration
 * NonLinearLeastSquaresCalibration, GaussianNonLinearCalibration
 * Hypergeometric

==== API changes ====
 * Removed deprecated FunctionalChaosRandomVector::getSobol* methods
 * Removed deprecated UserDefinedCovarianceModel constructor based on a Collection<CovarianceMatrix>
 * Removed deprecated FieldFunction,FieldToPointFunction::getSpatialDimension
 * Removed deprecated LinearModelRSquared, LinearModelAdjustedRSquared
 * Deprecated LinearModel, LinearModelFactory