@@ -50,7 +50,7 @@
    ],
    "source": [
     "# Estimate the Spearman correlation\n",
-    "result = ot.FittingTest.Kolmogorov(sample, ot.NormalFactory(), 0.01)\n",
+    "result, dist = ot.FittingTest.Kolmogorov(sample, ot.NormalFactory(), 0.01)\n",
     "print('Conclusion=', result.getBinaryQualityMeasure(), 'P-value=', result.getPValue())"
    ]
   },
@@ -120,21 +120,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15+"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
