@@ -128,12 +128,17 @@ n_parameters : int, :math:`0 \leq k`, optional
 
 Returns
 -------
+estimatedDist : :class:`~openturns.Distribution`
+    Estimated distribution (case factory as argument)
 BIC : float
     The Bayesian information criterion.
+
 
 Notes
 -----
 This is used for model selection.
+In case we set a factory argument, the method returns both the estimated distribution and BIC value.
+Otherwise it returns only the BIC value.
 
 Examples
 --------
@@ -145,7 +150,8 @@ Examples
 2.793869...
 >>> ot.FittingTest.BIC(sample, distribution, 2)
 3.020615...
->>> ot.FittingTest.BIC(sample, ot.NormalFactory())
+>>> fitted_dist, bic = ot.FittingTest.BIC(sample, ot.NormalFactory())
+>>> bic
 3.010802..."
 
 // ---------------------------------------------------------------------
@@ -194,7 +200,8 @@ Examples
 >>> ot.RandomGenerator.SetSeed(0)
 >>> distribution = ot.Poisson()
 >>> sample = distribution.getSample(30)
->>> ot.FittingTest.ChiSquared(sample, ot.PoissonFactory(), 0.01)
+>>> test_result, fitted_dist = ot.FittingTest.ChiSquared(sample, ot.PoissonFactory(), 0.01)
+>>> test_result
 class=TestResult name=Unnamed type=ChiSquared Poisson binaryQualityMeasure=true p-value threshold=0.01 p-value=0.698061 statistic=0.150497 description=[Poisson(lambda = 1.06667) vs sample Poisson]"
 
 // ---------------------------------------------------------------------
@@ -245,7 +252,8 @@ Examples
 >>> ot.RandomGenerator.SetSeed(0)
 >>> distribution = ot.Normal()
 >>> sample = distribution.getSample(30)
->>> ot.FittingTest.Kolmogorov(sample, ot.NormalFactory(), 0.01)
+>>> test_result, dist = ot.FittingTest.Kolmogorov(sample, ot.NormalFactory(), 0.01)
+>>> test_result
 class=TestResult name=Unnamed type=Kolmogorov Normal binaryQualityMeasure=true p-value threshold=0.01 p-value=0.7 statistic=0.106933 description=[Normal(mu = -0.0944924, sigma = 0.989808) vs sample Normal]"
 
 // ---------------------------------------------------------------------
