@@ -6,6 +6,7 @@
 
 ==== Major changes ====
  * Add dlib solvers
+ * FittingTest methods to return fitted distributions with factory as argument
 
 ==== New classes ====
  * Dlib
@@ -29,6 +30,7 @@
 === Bug fixes ===
  * https://github.com/openturns/openturns/milestone/4?closed=1
  * #1006 (Text drawable does not handle size)
+ * #1130 (Inconsistency in FittingTest)
 
 
 == 1.13 release (2019-06-06) == #release-1.13
